--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,11 +47,28 @@
   --footer-background-color: #000;
 }
 
+
+.dark-theme button,
+.dark-theme h1,
+.dark-theme h2,
+.dark-theme h3 {
+  letter-spacing: 5px;
+  font-weight: normal;
+}
+
+.dark-theme .invert-element {
+  transform: rotateZ(180deg) scaleX(-1);
+}
+
+
 * {
   margin: 0;
   box-sizing: border-box;
+  transition: 1s;
 }
 
+
+/*generic styles*/
 h1,
 h2,
 h3 {
@@ -82,6 +99,29 @@ button {
   text-transform: uppercase;
   cursor: pointer;
   transition: background 0.9s;
+}
+
+input,
+textarea {
+  border: 2px solid var(--primary-color-contrast);
+  background-color: var(--field-background-color);
+  color: var(--primary-color-contrast);
+  padding: 8px;
+}
+
+input,
+textarea {
+  margin-bottom: 24px;
+}
+
+label {
+  margin-bottom: 8px;
+}
+
+input:focus-visible,
+textarea:focus-visible {
+  outline: none;
+  border-color: black;
 }
 
 /*header styles*/
@@ -121,7 +161,7 @@ header::before {
 
 .header-content p {
   margin: 30px 0 50px;
-  /*aqui usamo o shorthand onde os valores seguem em ordem top (30px),left e right(0) e bottom (50px)  */
+  /*aqui usamos o shorthand onde os valores seguem em ordem top (30px),left e right(0) e bottom (50px)  */
 }
 .header-content button {
   border: 3px solid var(--primary-color);
@@ -133,6 +173,27 @@ header::before {
   color: var(--primary-color-contrast);
 }
 
+/*main styles*/
+main {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+
+main::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: var(--page-background) no-repeat,
+    url("../images/backgrounds/florest.png") no-repeat;
+  background-size: cover;
+  z-index: -1;
+}
+
 /*world characters styles*/
 .world-characters {
   width: 100%;
@@ -141,7 +202,8 @@ header::before {
 }
 
 #top-characters {
-  height: 100%;
+  height: 800px;
+
   background-color: var(--character-top-image-color);
   bottom: -3px;
 
@@ -155,6 +217,7 @@ header::before {
 
 #bottom-characters {
   height: 500px;
+  width: 700px;
   background-color: var(--character-bottom-image-color);
   top: 3px;
   transform: rotateZ(180deg) scalex(-1);
@@ -166,12 +229,213 @@ header::before {
   -webkit-mask: var(--character-bottom-image-src) bottom / contain no-repeat;
 }
 /*main styles*/
-main{
-  border:2px solid #cf0f0f;
+main {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
 
+/*section styles*/
 section{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 85px;
+  margin-bottom: 95px;
+}
+
+
+/*section 01 - inverted world*/
+.container{
+  max-width: 1200px;
+}
+
+#section-inverted-world{
+  align-items: center;
+}
+
+#section-inverted-world .section-texts{
+  width: 50%;
+}
+
+#section-inverted-world .section-texts h2{
+  max-width: 300px;
+}
+
+/*section 02 - Stranger Things trailler */
+
+#section-stranger-things-trailer .section-texts{
+  width: 50%;
+  text-align: right;
+}
+
+#section-stranger-things-trailer .section-texts h2{
+  max-width: 425px;
+  display:inline-block;
+}
+
+#section-stranger-things-trailer  .video-frame{
+  background-color: var(--primary-color);
+}
+
+#section-stranger-things-trailer .video-frame iframe {
+  position: relative;
+  bottom:24px;
+  left: 24px;
+  border: 2px solid;
+  border-image: linear-gradient(
+    var(--primary-color),
+    var(--primary-color-contrast)
+  );
+  border-image-slice:10;
+}
+
+/*section 03 gallery*/
+
+/* Section 03 - Stranger Things Gallery */
+
+#section-stranger-things-gallery {
+  width: 100%;
+  background: var(--background-lamp-image) 120% / 50% no-repeat;
+  justify-content: center;
+}
+
+#section-stranger-things-gallery .container {
+  width: 100%;
+}
+
+#section-stranger-things-gallery .container h2 {
+  width: 800px;
+}
+
+#section-stranger-things-gallery .gallery-container {
+  display: flex;
+  gap: 50px;
+  padding-left: 20px;
+}
+
+#section-stranger-things-gallery .gallery-image {
+  width: 250px;
+  height: 250px;
+  outline: 20px solid var(--highlight-color);
+  border: 3px solid var(--primary-color);
+  box-sizing: initial;
+}
+
+#section-stranger-things-gallery .gallery-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 10px solid var(--highlight-color);
+}
+
+/* Section 04 - Dungeons & Dragons Form */
+
+#section-form {
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  text-align: center;
+}
+
+#section-form h2 {
+  width: 600px;
+}
+
+#section-form .form-content h3 {
+  color: var(--highlight-color);
+}
+
+#section-form .form-content h3 span {
+  color: var(--primary-color);
+}
+
+#section-form .form-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#section-form .form-content h3 {
+  flex-basis: 30%;
+  text-align: left;
+  margin: 0;
+}
+
+#section-form .form-container {
+  flex-basis: 50%;
+  position: relative;
+}
+
+#section-form .form-container::after {
+  content: "";
+  background-color: var(--highlight-color);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  z-index: -1;
+}
+
+#section-form .form-container form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 24px;
+  background-color: var(--primary-color);
+  color: var(--primary-color-contrast);
+  text-align: left;
+}
+
+#section-form .form-container form button {
+  border: none;
+  background-color: var(--field-background-color);
+  color: var(--primary-color-contrast);
+  max-width: 300px;
+  align-self: center;
+}
+
+#section-form .form-container form button:hover {
+  background-color: var(--primary-color-contrast);
+  color: var(--field-background-color);
+}
+
+/*** FOOTER STYLES ***/
+
+footer {
+  padding: 60px 0;
+  background-color: var(--footer-background-color);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+footer p {
+  max-width: 700px;
+  margin-bottom: 24px;
+}
+
+footer::before,
+footer::after {
+  content: "";
+  width: 300px;
+  height: 200px;
+  background: url("../images/footer/tape.svg") no-repeat;
+  background-size: contain;
+  position: absolute;
+  bottom: -30px;
+}
+
+footer::before {
+  left: -50px;
+  transform: rotateZ(-10deg);
+}
+
+footer::after {
+  right: -50px;
+  transform: rotateZ(10deg);
 }
